•backdrop filter functionality wasn't working properly due to transition timing. fixed it by just getting rid of the transition which isnt that bad. looks cleaner and backdrop filter works now. •also changed how the settings page looks because it used to look very unprofessional. idk if i'm done working on it now but it at least looks better. •next step is to add functionality to the settings + generalize the colors so that dark mode switches everything automatically

--- a/frontend/settings.css
+++ b/frontend/settings.css
@@ -11,12 +11,14 @@ h3 {
 }
 
 h4 {
+    font-size: x-large;
     margin-top: 4rem;
     text-align: center;
 }
 
 .btn {
-    background-color: gray;
+    background-color: transparent;
+    font-size: larger;
     border-radius: 15px;
     width: 6rem;
     height: 4rem;
@@ -25,4 +27,5 @@ h4 {
 
 .btn:hover {
     cursor: pointer;
+    color: white;
 }
